--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/first_fragment"
         android:name="com.example.rxjavahotobservable.fragments.FirstFragment"
         android:layout_width="match_parent"
@@ -14,7 +14,7 @@
         app:layout_constraintBottom_toTopOf="@+id/second_fragment"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/second_fragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
